[package]
name = "alsa_rs_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
clap = {version = "4.1.7", features = ["derive"]}
simple_logger = "4.0.0"
log = "0.4.14"
audrey = "0.3.0"
futures = "0.3.26"